--- a/beverages.html
+++ b/beverages.html
@@ -6,7 +6,7 @@
 <title>The Café</title>
 <meta name="description" content="The Cafe beverages: Teas, smoothies, and soft drinks.">
 <meta charset="utf-8">
-<meta name="author" content="Marcie Sangaline 10/25/20 CPT203">
+<meta name="author" content="Mae Sangaline 10/25/20 CPT203">
 </head>
 <body>
 <header>
@@ -62,8 +62,6 @@ Web Designer: Marcie Sangaline <a class="email" href="mailto:sangalinem@my.westm
 </body>
 </div>
 </html>
-<!-- Marcie Sangaline
+<!-- Mae Sangaline
 CPT203 HTML and CSS
-FTP "Project"
-Due: 10/25/20
-sangalinem@my.westmoreland.edu -->
+FTP "Project" -->
