--- a/find_us.html
+++ b/find_us.html
@@ -34,14 +34,11 @@
 	</div>
 <footer>
 <div class="footer">
-This page is a simulation and a course requirement for CPT 203 HTML and CSS, at Westmoreland County Community College.<br>
-Web Designer: Marcie Sangaline <a class="email" href="mailto:sangalinem@my.westmoreland.edu">sangalinem@my.westmoreland.edu</a>
+This page is a simulation and a course requirement for CPT 203 HTML and CSS
 </footer>
 </body>
 </div>
 </html>
-<!-- Marcie Sangaline
+<!-- Mae Sangaline
 CPT203 HTML and CSS
-FTP "Project"
-Due: 10/25/20
-sangalinem@my.westmoreland.edu -->
+FTP "Project" -->
