--- a/find_us.html
+++ b/find_us.html
@@ -6,7 +6,7 @@
 <title>The Café</title>
 <meta name="description" content="Find and locate a local The Cafe.">
 <meta charset="utf-8">
-<meta name="author" content="Marcie Sangaline 10/25/20 CPT203">
+<meta name="author" content="Mae Sangaline 10/25/20 CPT203">
     <body onload="alert('Our location is still under development. Come back soon for more information!');">
 </head>
 <body>
