--- a/desserts.html
+++ b/desserts.html
@@ -6,7 +6,7 @@
 <title>The Café</title>
 <meta name="description" content="Purchase desserts from The Cafe.">
 <meta charset="utf-8">
-<meta name="author" content="Marcie Sangaline 10/25/20 CPT203">
+<meta name="author" content="Mae Sangaline 10/25/20 CPT203">
 </head>
 <body>
 <header>
@@ -56,14 +56,11 @@
 		<br><br>
 <footer>
 <div class="footer">
-This page is a simulation and a course requirement for CPT 203 HTML and CSS, at Westmoreland County Community College.<br>
-Web Designer: Marcie Sangaline <a class="email" href="mailto:sangalinem@my.westmoreland.edu">sangalinem@my.westmoreland.edu</a>
+This page is a simulation and a course requirement for CPT 203 HTML and CSS
 </footer>
 </body>
 </div>
 </html>
-<!-- Marcie Sangaline
+<!-- Mae Sangaline
 CPT203 HTML and CSS
-FTP "Project"
-Due: 10/25/20
-sangalinem@my.westmoreland.edu -->
+FTP "Project" -->
