--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
     <br><br><br>
 <footer>
 <div class="footer">
-This page is a simulation and a course requirement for CPT 203 HTML and CSS, at Westmoreland County Community College.<br>
-Web Designer: Marcie Sangaline <a class="email" href="mailto:sangalinem@my.westmoreland.edu">sangalinem@my.westmoreland.edu</a>
+This page is a simulation and a course requirement for CPT 203 HTML and CSS
 </div>
 </footer>
 </body>
